results/ethainter/denial_of_service_send_loop.raw.txt
=== SOLC ===
[env] python=/home/shawal/smart_contract_auditor_benchmark/smartllama_env/bin/python
[pragma] 0.4.24
[choose] want_solc=0.4.26
[solc-select] using=/home/shawal/smart_contract_auditor_benchmark/smartllama_env/bin/solc-select
[solc-select use 0.4.26] rc=0
Switched global version to 0.4.26

[host solc_cmd='solc'] rc=0
NO_BYTECODE
pragma=0.4.24
denial_of_service_send_loop.sol:8:1: SyntaxError: Source file requires different compiler version (current compiler is 0.4.26+commit.4563c3fc.Linux.g++ - note that nightly builds are considered to be strictly less than the released version
pragma solidity 0.4.24;
^---------------------^

denial_of_service_send_loop.sol:17:30: Warning: This looks like an address but has an invalid checksum. If this is not used as an address, please prepend '00'. Correct checksummed address: '0x79B483371E87d664cd39491b5f06250165e4b185'. For more information please see https://solidity.readthedocs.io/en/develop/types.html#address-literals
        refundAddresses.push(0x79B483371E87d664cd39491b5F06250165e4b185);
                             ^----------------------------------------^

